--- a/static/index_chat.html
+++ b/static/index_chat.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PaperMind - AI Reading Assistant for ADHD</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/3.11.174/pdf_viewer.min.css">
-    <link rel="stylesheet" href="/static/css/styles.css?v=78">
-    <link rel="stylesheet" href="/static/css/chat.css?v=78">
+    <link rel="stylesheet" href="/static/css/styles.css?v=80">
+    <link rel="stylesheet" href="/static/css/chat.css?v=82">
 </head>
 <body>
     <div class="main-layout main-layout-three-panel" id="mainLayout">
@@ -84,14 +84,15 @@
                 <div class="chat-input-area">
                     <div class="response-type-selector">
                         <div class="response-type-chip active" data-type="text" onclick="toggleResponseType('text')">📝 Text</div>
-                        <div class="response-type-chip active" data-type="voice" onclick="toggleResponseType('voice')">🔊 Voice</div>
                         <div class="response-type-chip" data-type="image" onclick="toggleResponseType('image')">🖼️ Image</div>
                         <div class="response-type-chip" data-type="video" onclick="toggleResponseType('video')">🎥 Video</div>
                     </div>
                     <div class="chat-input-wrapper">
                         <textarea id="chatInput" class="chat-input" placeholder="Ask a question about the paper..." rows="1"></textarea>
                         <div class="chat-input-buttons">
-                            <button id="voiceBtn" class="voice-btn" title="Voice input">🎤</button>
+                            <button id="voiceBtn" class="voice-btn" title="Voice input">
+                                <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M12 1a3 3 0 0 0-3 3v8a3 3 0 0 0 6 0V4a3 3 0 0 0-3-3z"/><path d="M19 10v2a7 7 0 0 1-14 0v-2"/><line x1="12" y1="19" x2="12" y2="23"/><line x1="8" y1="23" x2="16" y2="23"/></svg>
+                            </button>
                             <button id="sendBtn" class="send-btn">Send</button>
                         </div>
                     </div>
@@ -159,6 +160,6 @@
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/3.11.174/pdf.min.js"></script>
-    <script type="module" src="/static/js/app_chat.js?v=78"></script>
+    <script type="module" src="/static/js/app_chat.js?v=82"></script>
 </body>
 </html>
