--- a/static/index_chat.html
+++ b/static/index_chat.html
@@ -69,12 +69,13 @@
                         <h2>Chat</h2>
                         <p>Ask me anything about the paper</p>
                     </div>
-                    <button id="liveTalkBtn" class="live-talk-btn talk-idle" title="Start voice conversation">
-                        <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M12 1a3 3 0 0 0-3 3v8a3 3 0 0 0 6 0V4a3 3 0 0 0-3-3z"/><path d="M19 10v2a7 7 0 0 1-14 0v-2"/><line x1="12" y1="19" x2="12" y2="23"/><line x1="8" y1="23" x2="16" y2="23"/></svg>
-                        Talk
-                    </button>
-                    <span id="talkStatus" class="talk-status hidden"></span>
-                    <button class="home-btn chat-delete-btn" onclick="deleteChat()">Delete Chat</button>
+                    <div style="display:flex;gap:8px;align-items:center;">
+                        <button id="themeToggleBtn" class="theme-toggle-btn" onclick="toggleTheme()" title="Toggle dark mode">
+                            <svg id="themeIconSun" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><circle cx="12" cy="12" r="5"/><line x1="12" y1="1" x2="12" y2="3"/><line x1="12" y1="21" x2="12" y2="23"/><line x1="4.22" y1="4.22" x2="5.64" y2="5.64"/><line x1="18.36" y1="18.36" x2="19.78" y2="19.78"/><line x1="1" y1="12" x2="3" y2="12"/><line x1="21" y1="12" x2="23" y2="12"/><line x1="4.22" y1="19.78" x2="5.64" y2="18.36"/><line x1="18.36" y1="5.64" x2="19.78" y2="4.22"/></svg>
+                            <svg id="themeIconMoon" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" style="display:none"><path d="M21 12.79A9 9 0 1 1 11.21 3 7 7 0 0 0 21 12.79z"/></svg>
+                        </button>
+                        <button class="home-btn chat-delete-btn" onclick="deleteChat()">Delete Chat</button>
+                    </div>
                 </div>
                 <div id="readingStatus" class="reading-status hidden">
                     <span id="currentSentencePreview"></span>
@@ -91,6 +92,12 @@
                         <div class="response-type-chip active" data-type="text" onclick="toggleResponseType('text')">📝 Text</div>
                         <div class="response-type-chip" data-type="image" onclick="toggleResponseType('image')">🖼️ Image</div>
                         <div class="response-type-chip" data-type="video" onclick="toggleResponseType('video')">🎥 Video</div>
+                        <div class="response-type-divider"></div>
+                        <button id="liveTalkBtn" class="live-talk-btn talk-idle" title="Start a live voice conversation about the paper">
+                            <svg width="14" height="14" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M12 1a3 3 0 0 0-3 3v8a3 3 0 0 0 6 0V4a3 3 0 0 0-3-3z"/><path d="M19 10v2a7 7 0 0 1-14 0v-2"/><line x1="12" y1="19" x2="12" y2="23"/><line x1="8" y1="23" x2="16" y2="23"/></svg>
+                            Interactive Session
+                        </button>
+                        <span id="talkStatus" class="talk-status hidden"></span>
                     </div>
                     <div class="chat-input-wrapper">
                         <textarea id="chatInput" class="chat-input" placeholder="Ask a question about the paper..." rows="1"></textarea>
@@ -165,6 +172,6 @@
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/3.11.174/pdf.min.js"></script>
-    <script type="module" src="/static/js/app_chat.js?v=84"></script>
+    <script type="module" src="/static/js/app_chat.js?v=89"></script>
 </body>
 </html>
